# pawc

./: Cargo.toml  README-CN.md  README.md  build.gradle  hello.paw  settings.gradle  test.paw
gradle/wrapper/: gradle-wrapper.properties
src/: grammar.pest  interpreter.rs  lexer.rs  main.rs  parser.rs
src/ast/: ast.rs  expr.rs  method.rs  mod.rs  param.rs  statement.rs
src/cli/: cli.rs
src/error/: error.rs
src/interpreter/: env.rs  globals.rs  interpreter.rs  mod.rs  value.rs
src/lexer/: lex.rs  lexer.rs  token.rs
src/main/kotlin/: Main.kt
src/main/kotlin/ast/: Declaration.kt  Expr.kt  MethodSig.kt  Node.kt  Operator.kt  Param.kt  Pattern.kt  Statement.kt  TemplatePart.kt  Type.kt
src/main/kotlin/config/: ConfigLoader.kt  PawConfig.kt
src/parser/: parser.rs
src/parser/builder/: build_additive_expression_node.rs  build_array_literal_node.rs  build_ask_expression_node.rs  build_ask_statement_simple_node.rs  build_assignment_statement_node.rs  build_await_expression_node.rs  build_bark_statement_node.rs  build_boolean_literal_node.rs  build_break_statement_node.rs  build_cast_expression_node.rs  build_character_literal_node.rs  build_code_body_node.rs  build_comparison_expression_node.rs  build_continue_statement_node.rs  build_core_type_name_node.rs  build_double_literal_node.rs  build_equality_expression_node.rs  build_error_handling_node.rs  build_expression_node.rs  build_float_literal_node.rs  build_function_definition_node.rs  build_identifier_expression_node.rs  build_if_node.rs  build_import_node.rs  build_integer_literal_node.rs  build_logical_and_expression_node.rs  build_logical_or_expression_node.rs  build_long_literal_node.rs  build_loop_node.rs  build_multiplicative_expression_node.rs  build_null_literal_node.rs  build_postfix_expression_node.rs  build_primary_expression_node.rs  build_protocol_definition_node.rs  build_protocol_method_signature_node.rs  build_record_definition_node.rs  build_record_init_node.rs  build_return_statement_node.rs  build_say_statement_node.rs  build_statement_node.rs  (+7 more)
src/semantic/: interface.rs  mod.rs  scope.rs  symbol_table.rs  type_checker.rs  types.rs
src/utils/: package.rs
std/collection/: list.paw
(+10 files in other folders)
