[package]
name        = "pawc"
version     = "0.1.8"
authors     = ["Kinleoapple"]
description = "🐾 PawScript interpreter"
license     = "MIT"
repository  = "https://github.com/KinLeoapple/pawc"
homepage    = "https://github.com/KinLeoapple/pawc"
keywords    = ["pawscript", "interpreter"]
edition     = "2021"

[[bin]]
name = "pawc"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
async-recursion = "1.0"
futures = "0.3.31"
ahash = "0.8"
parking_lot = "0.12"