[package]
name = "pawc"
version = "0.1.10"
authors = ["Kinleoapple"]
description = "🐾 PawScript interpreter"
license = "MIT"
repository = "https://github.com/KinLeoapple/pawc"
homepage = "https://github.com/KinLeoapple/pawc"
keywords = ["pawscript", "interpreter"]
edition = "2021"

[[bin]]
name = "pawc"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3.0"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
ahash = "0.8"
parking_lot = "0.12"
num_cpus = "1.16.0"
once_cell = "1.21.3"
vuot ="0.0.1"
pest = "2.8.0"
pest_derive = "2.8.0"